--- a/contact_us.html
+++ b/contact_us.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="title">Contact us</title>
     <link rel="stylesheet" href="./styles/all_styles.css">
+    <link rel="stylesheet" href="./styles/contact_us.css">
     <script src="scripts/main_script.js"></script>
 </head>
 <body>
@@ -35,6 +36,64 @@
         Основное тело сайта.
     -->
     <div class="main">
+        
+        <!-- Первый блок c навигацией, текстом, картой и реквизитами-->
+        <div class="main_firstblock">
+            <div class="firstblock-navigation">
+                <a href="./main.html">Home</a>
+                <p>></p>
+                <a href="./news.html">Contact us</a>
+            </div>
+            <div class="firstblock-text">
+                <h1>Lorem Ipsum is simply dummy text of the printing and.</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+            <img src="./images/contact_us/map.png" alt="map">
+            <div class="firstblock-content">
+                <div class="firstblock-content_social">
+                    <p>Follow us</p>
+                    <img src="./images/contact_us/soc_links.png" alt="social links">
+                </div>
+                <div class="firstblock-content_phone">
+                    <img src="./images/contact_us/phone.png" alt="phone">
+                    <p>+94 4444 5555 6</p>
+                </div>
+                <div class="firstblock-content_gps">
+                    <img src="./images/contact_us/gps.png" alt="gps">
+                    <p>but also the leap into electronic typesetting</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Второй блок с инпутами для возможности связаться -->
+        <div class="main_secondblock">
+            <img src="./images/contact_us/background (1).png" alt="background">
+            <img src="./images/contact_us/background (3).png" alt="background">
+
+            <div class="secondblock-content">
+                <p>Say hello</p>
+                <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                <div class="secondblock-content_inputs1">
+                    <div class="secondblock-content_inputs1--left">
+                        <p>First Name</p>
+                        <input type="text">
+                    </div>
+                    <div class="secondblock-content_inputs1--right">
+                        <p>Last Name</p>
+                        <input type="text">
+                    </div>
+                </div>
+                <div class="secondblock-content_inputs2">
+                    <p>Email Address</p>
+                    <input type="text">
+                </div>
+                <div class="secondblock-content_inputs3">
+                    <p>Message</p>
+                    <input type="text">
+                </div>
+                <a href="#">Get in touch</a>
+            </div>
+        </div>
 
         <!-- Универсальный блок с рассылкой -->
         <div class="main_universalblock">
