--- a/about_us.html
+++ b/about_us.html
@@ -122,8 +122,8 @@
 
         <!-- Универсальный блок с рассылкой -->
         <div class="main_universalblock">
-            <p class="universalblock-head">Lorem Ipsum</p>
-            <p class="universalblock-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+            <p class="universalblock-head">How to be the first to know about news in the gaming world?</p>
+            <p class="universalblock-text">You can sign up for the latest news newsletter below.</p>
             <div class="universalblock-mailing">
                 <div class="universalblock-mailing_content">
                     <p class="universalblock-mailing_head">Stay in the loop</p>
