--- a/main.html
+++ b/main.html
@@ -45,7 +45,7 @@
             <div class="firstblock-text">
                 <p class="firstblock-text_head">3D game Dev</p>
                 <p class="firstblock-text_body">Work that we produce for our clients</p>
-                <p class="firstblock-text_footer">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+                <p class="firstblock-text_footer">We find the best games and give them objective and constructive criticism. Here are the best games ever released or in development.</p>
                 <a class="firstblock-button" href="./main.html">Get more details</a>
             </div>
             <div>
@@ -67,39 +67,39 @@
                 <img src="./images/main/trand game (1).png" alt="trand game">
                 <div class="thirdblock-box_text">
                     <img src="./images/main/fire.png" alt="fire">
-                    <p>40 Followers</p>
+                    <p>33 Followers</p>
                 </div>
             </div>
             <div class="thirdblock-box">
                 <img src="./images/main/trand game (2).png" alt="trand game">
                 <div class="thirdblock-box_text">
                     <img src="./images/main/fire.png" alt="fire">
-                    <p>40 Followers</p>
+                    <p>216 Followers</p>
                 </div>
             </div>
             <div class="thirdblock-box">
                 <img src="./images/main/trand game (3).png" alt="trand game">
                 <div class="thirdblock-box_text">
                     <img src="./images/main/fire.png" alt="fire">
-                    <p>40 Followers</p>
+                    <p>890 Followers</p>
                 </div>
             </div>
             <div class="thirdblock-box">
                 <img src="./images/main/trand game (4).png" alt="trand game">
                 <div class="thirdblock-box_text">
                     <img src="./images/main/fire.png" alt="fire">
-                    <p>40 Followers</p>
+                    <p>402 Followers</p>
                 </div>
             </div>
         </div>
 
         <!-- Блок с текстом и картинкой на всю ширину -->
         <div class="main_fourblock">
-            <p class="fourblock-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p class="fourblock-text">We have collected the best games for our audience and more. You can definitely find something you like here!</p>
             <div class="fourblock-content">
                 <div class="fourblock-content_text">
-                    <p class="fourblock-text1">Lorem Ipsum</p>
-                    <p class="fourblock-text2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                    <p class="fourblock-text1">Beginning of the company foundation</p>
+                    <p class="fourblock-text2">We started criticizing games since time immemorial, namely in 1992. At that time we were still a very small studio making games.</p>
                 </div>
                 <div class="fourblock-content_image">
                     <img src="./images/main/points.png" alt="points">
@@ -110,15 +110,15 @@
 
         <!-- Блок задним фоном и ссылками на разные платформы -->
         <div class="main_fiveblock">
-            <p class="fiveblock-head">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <p class="fiveblock-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+            <p class="fiveblock-head">The main systems we rely on and also look for games in them</p>
+            <p class="fiveblock-text">All platforms are listed below, and when clicked, you will be taken to a separate page with games for that platform.</p>
             <img src="./images/main/platforms.png" alt="platforms">
         </div>
 
         <!-- Блок с текстом, картинками и кнопкой -->
         <div class="main_sixblock">
             <p class="sixblock-head">Our Recent Projects</p>
-            <p class="sixblock-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p class="sixblock-text">Here are some of the projects we have created or support. You can also go to all our projects by simply clicking on them.</p>
             <div class="sixblock-images">
                 <div class="sixblock-images_one">
                     <img src="./images/main/photo (1).png" alt="photo">
@@ -136,8 +136,8 @@
 
         <!-- Универсальный блок с рассылкой -->
         <div class="main_universalblock">
-            <p class="universalblock-head">Lorem Ipsum</p>
-            <p class="universalblock-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+            <p class="universalblock-head">How to be the first to know about news in the gaming world?</p>
+            <p class="universalblock-text">You can sign up for the latest news newsletter below.</p>
             <div class="universalblock-mailing">
                 <div class="universalblock-mailing_content">
                     <p class="universalblock-mailing_head">Stay in the loop</p>
@@ -163,7 +163,7 @@
         <div class="footer_main">
             <div class="footer_main-logo">
                 <a href="./main.html">LOGO</a>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p>You can always find something new here =)</p>
                 <p>@Logo</p>
             </div>
             <div class="footer_main-links">
@@ -176,7 +176,7 @@
             </div>
             <div class="footer_main-info">
                 <a href="./contact_us.html" style="font-weight: bold;">Contact us</a>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p>To tell us something or ask a question, you can call the phone number below.</p>
                 <p>+999 99999 999</p>
             </div>
             <div class="footer_main-soc_links">
