--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="Refresh" content="секунды; main.html">
+    <meta http-equiv="Refresh" content="0; main.html">
 </head>
 <body>
     
