--- a/about_us.html
+++ b/about_us.html
@@ -49,7 +49,7 @@
                     <p>></p>
                     <a href="./about_us.html">About us</a>
                 </div>
-                <h1>Lorem Ipsum is simply dummy text of the printing and.</h1>
+                <h1>Only new and current news about us. Find what you need!</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                 <div class="firstblock-content_btn">
                     <a href="#">Get in touch <img src="./images/about_us/arrow.png" alt="arrow"></a>
