--- a/about_us.html
+++ b/about_us.html
@@ -50,10 +50,9 @@
                     <a href="./about_us.html">About us</a>
                 </div>
                 <h1>Only new and current news about us. Find what you need!</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                <p>Here you will find the most current and recent changes in our organization. To get acquainted with the changes, click on the button below.</p>
                 <div class="firstblock-content_btn">
                     <a href="#">Get in touch <img src="./images/about_us/arrow.png" alt="arrow"></a>
-                    
                 </div>
             </div>
             <div class="firstblock-image">
@@ -66,19 +65,19 @@
             <p>Why work with us</p>
             <div class="secondblock-content">
                 <div class="secondblock-content_text1">
-                    <p>Lorem ipsum</p>
-                    <p>Lorem ipsum</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+                    <p>Strategy</p>
+                    <p>The main thing is strategy</p>
+                    <p>Few people understand, but the strategy is extremely important, because because of it we managed to achieve heights.</p>
                 </div>
                 <div class="secondblock-content_text2">
-                    <p>Lorem ipsum</p>
-                    <p>Lorem ipsum</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+                    <p>Quality</p>
+                    <p>We need more quality!</p>
+                    <p>Many people often notice that we make the highest quality news and products.</p>
                 </div>
                 <div class="secondblock-content_text3">
-                    <p>Lorem ipsum</p>
-                    <p>Lorem ipsum</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+                    <p>Priorities</p>
+                    <p>Properly prioritized</p>
+                    <p>An integral part of our work is properly prioritized. Many years of work have helped us in this.</p>
                 </div>
             </div>
         </div>
@@ -87,9 +86,9 @@
         <div class="main_thirdblock">
             <img src="./images/about_us/girl.png" alt="girl">
             <div class="thirdblock-content">
-                <p>Lorem ipsum</p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
+                <p>Community</p>
+                <p>We all choose only this company! We need more! We want you not to relax! </p>
+                <p>These are frequent comments on our posts or news. You can see it for yourself by going to the news page where all our latest posts are located. In them you can find out what is happening in our projects or just chat with us.</p>
             </div>
         </div>
 
@@ -104,18 +103,18 @@
                 </div>
                 <div class="fourblock-content_page2">
                     <img src="./images/about_us/Beverly.png" alt="Beverly">
-                    <p>John peter</p>
+                    <p>Anna Smith</p>
                     <p>COO</p>
                 </div>
                 <div class="fourblock-content_page3">
                     <img src="./images/about_us/Claudia.png" alt="Claudia">
-                    <p>John peter</p>
-                    <p>COO</p>
+                    <p>Stefany Powell</p>
+                    <p>TIO</p>
                 </div>
                 <div class="fourblock-content_page4">
                     <img src="./images/about_us/Avatar.png" alt="Avatar">
-                    <p>John peter</p>
-                    <p>COO</p>
+                    <p>Adam White</p>
+                    <p>COP</p>
                 </div>
             </div>
         </div>
