--- a/contact_us.html
+++ b/contact_us.html
@@ -122,7 +122,7 @@
         <div class="footer_main">
             <div class="footer_main-logo">
                 <a href="./main.html">LOGO</a>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p>You can always find something new here =)</p>
                 <p>@Logo</p>
             </div>
             <div class="footer_main-links">
@@ -135,7 +135,7 @@
             </div>
             <div class="footer_main-info">
                 <a href="./contact_us.html" style="font-weight: bold;">Contact us</a>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p>To tell us something or ask a question, you can call the phone number below.</p>
                 <p>+999 99999 999</p>
             </div>
             <div class="footer_main-soc_links">
