--- a/services.html
+++ b/services.html
@@ -48,8 +48,8 @@
                 <a href="./services.html">Services</a>
             </div>
             <div class="firstblock-text">
-                <h1>Lorem Ipsum is simply dummy text of the printing and.</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <h1>All our services are located here</h1>
+                <p>You can use them to achieve your goals and not only!</p>
             </div>
             <div class="firstblock-content">
                 <div class="firstblock-content_block1">
@@ -80,23 +80,23 @@
         <div class="main_secondblock">
             <img src="./images/services/Hero Video.png" alt="hero">
             <div class="secondblock-content">
-                <p>Lorem Ipsum is simply dummy text.</p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy.</p>
+                <p>We have something to offer you! It remains only for you to try!</p>
+                <p>The main services that we can provide are listed below.</p>
                 <div class="secondblock-content_text1">
                     <img src="./images/services/ok.png" alt="ok">
-                    <p>Lorem Ipsum is simply</p>
+                    <p>Coding program</p>
                 </div>
                 <div class="secondblock-content_text2">
                     <img src="./images/services/ok.png" alt="ok">
-                    <p>Lorem Ipsum is simply</p>
+                    <p>New technologies</p>
                 </div>
                 <div class="secondblock-content_text3">
                     <img src="./images/services/ok.png" alt="ok">
-                    <p>Lorem Ipsum is simply</p>
+                    <p>Game engine</p>
                 </div>
                 <div class="secondblock-content_text4">
                     <img src="./images/services/ok.png" alt="ok">
-                    <p>Lorem Ipsum is simply</p>
+                    <p>User Support</p>
                 </div>
             </div>
         </div>
@@ -104,9 +104,9 @@
         <!-- Три блока с картинками и их описанием -->
         <div class="main_thirdblock">
             <div class="thirdblock-content">
-                <p>Lorem Ipsum is simply dummy text dummy text</p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                <p>The latest and optimized coding program</p>
+                <p>We created it based on general principles. We needed something perfect for our game development. If we had originally had something perfect, then we would not have reached such heights.</p>
+                <p>Just try it, we promise you will like it! You can read more by clicking on the button below.</p>
                 <a href="#">Read more</a>
             </div>
             <img src="./images/services/fon (1).png" alt="fon">
@@ -115,18 +115,18 @@
         <div class="main_thirdblock">
             <img src="./images/services/fon (2).png" alt="fon">
             <div class="thirdblock-content">
-                <p>Lorem Ipsum is simply dummy text dummy text</p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                <p>The newest gaming technologies created by us</p>
+                <p>In the following time, you may have seen some of our new developments in other games, as there was a Jump Error or Memory is Not. Every day we try to create something new using only our best practices.</p>
+                <p>To try or just look at our work done, you can click on the button below.</p>
                 <a href="#">Read more</a>
             </div>
         </div>
 
         <div class="main_thirdblock">
             <div class="thirdblock-content">
-                <p>Lorem Ipsum is simply dummy text dummy text</p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                <p>They said - create your own game engine</p>
+                <p>After a long time in the gaming industry, it became the fundamental method of the company's income - the creation of its own game engine. In the end, Konkov and our company came to the same conclusion.</p>
+                <p>If you are interested, you can always try it out for free by clicking on the button below.</p>
                 <a href="#">Read more</a>
             </div>
             <img src="./images/services/fon (3).png" alt="fon">
@@ -135,7 +135,7 @@
         <!-- Блок с отзывами о сайте и т.п. -->
         <div class="main_fourblock">
             <p>Trusted by Thousands of Happy Customer</p>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy .</p>
+            <p>The best comments recently on our site</p>
             <div class="fourblock-content">
                 <div class="fourblock-content_block">
                     <div class="fourblock-content_block--image">
@@ -151,7 +151,7 @@
                             <img src="./images/services/star.png" alt="star">
                         </div>
                     </div>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...</p>
+                    <p>I couldn't help but say that this site is simply the best thing I've seen in my life!</p>
                 </div>
                 <div class="fourblock-content_block">
                     <div class="fourblock-content_block--image">
@@ -167,7 +167,7 @@
                             <img src="./images/services/star.png" alt="star">
                         </div>
                     </div>
-                    <p>Lorem Ipsum is simply dummy text of the printing and ...</p>
+                    <p>I always find something new here! I constantly use the company's products, they are the best!</p>
                 </div><div class="fourblock-content_block">
                     <div class="fourblock-content_block--image">
                         <div class="fourblock-content_block--image__name">
@@ -182,7 +182,7 @@
                             <img src="./images/services/star.png" alt="star">
                         </div>
                     </div>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry...</p>
+                    <p>I don't know what I would do if this site didn't exist! Everything you need is collected here!</p>
                 </div>
             </div>
             <div class="fourblock-footer">
