--- a/about_us.html
+++ b/about_us.html
@@ -22,9 +22,9 @@
     -->
     <header>
         <nav class="header_navigation">
-            <a class="header_logo" href="main.html">LOGO</a>
+            <a class="header_logo" href="index.html">LOGO</a>
             <ul class="header_navigation-list">
-                <li><a href="./main.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li>
                     <a href="./about_us.html">About us</a>
                     <img id="header_navigation-image" src="images/Under_line.png" alt="under_line">
@@ -45,7 +45,7 @@
         <div class="main_firstblock">
             <div class="firstblock-content">
                 <div class="firstblock-content_navigation">
-                    <a href="./main.html">Home</a>
+                    <a href="./index.html">Home</a>
                     <p>></p>
                     <a href="./about_us.html">About us</a>
                 </div>
@@ -145,14 +145,14 @@
     <footer>
         <div class="footer_main">
             <div class="footer_main-logo">
-                <a href="./main.html">LOGO</a>
+                <a href="./index.html">LOGO</a>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 <p>@Logo</p>
             </div>
             <div class="footer_main-links">
                 <a href="./about_us.html" style="font-weight: bold;">About us</a>
                 <div class="footer_main-links--block">
-                    <p><a href="./main.html">Home</a></p>
+                    <p><a href="./index.html">Home</a></p>
                     <p><a href="./news.html">News</a></p>
                     <p><a href="./services.html">Services</a></p>
                 </div>
