--- a/services.html
+++ b/services.html
@@ -21,9 +21,9 @@
     -->
     <header>
         <nav class="header_navigation">
-            <a class="header_logo" href="main.html">LOGO</a>
+            <a class="header_logo" href="index.html">LOGO</a>
             <ul class="header_navigation-list">
-                <li><a href="./main.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./about_us.html">About us</a></li>
                 <li>
                     <a href="./services.html">Services</a>
@@ -43,7 +43,7 @@
         <!-- Первый блок с количеством филиалов и т.п. -->
         <div class="main_firstblock">
             <div class="firstblock-navigation">
-                <a href="./main.html">Home</a>
+                <a href="./index.html">Home</a>
                 <p>></p>
                 <a href="./services.html">Services</a>
             </div>
@@ -225,14 +225,14 @@
     <footer>
         <div class="footer_main">
             <div class="footer_main-logo">
-                <a href="./main.html">LOGO</a>
+                <a href="./index.html">LOGO</a>
                 <p>You can always find something new here =)</p>
                 <p>@Logo</p>
             </div>
             <div class="footer_main-links">
                 <a href="./about_us.html" style="font-weight: bold;">About us</a>
                 <div class="footer_main-links--block">
-                    <p><a href="./main.html">Home</a></p>
+                    <p><a href="./index.html">Home</a></p>
                     <p><a href="./news.html">News</a></p>
                     <p><a href="./services.html">Services</a></p>
                 </div>
