--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="title">Home</title>
-    <link rel="stylesheet" href="styles/all_styles.css">
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="../../../styles/all_styles.css">
+    <link rel="stylesheet" href="../../../styles/index.css">
     <script src="Scripts/index_script.js"></script>
 </head>
 <body>
