--- a/contact_us.html
+++ b/contact_us.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="title">Contact us</title>
-    <link rel="stylesheet" href="./styles/all_styles.css">
-    <link rel="stylesheet" href="./styles/contact_us.css">
+    <link rel="stylesheet" href="all_styles/all_styles.css">
+    <link rel="stylesheet" href="all_styles/contact_us.css">
     <script src="scripts/main_script.js"></script>
 </head>
 <body>
