--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="title">Home</title>
-    <link rel="stylesheet" type="text/css" href="all_styles/index.css">
+    <link rel="stylesheet" type="text/css" href="all_styles/all_styles.css">
     <link rel="stylesheet" type="text/css" href="all_styles/index.css">
     <script src="scripts/index_script.js"></script>
 </head>
