--- a/contact_us.html
+++ b/contact_us.html
@@ -45,8 +45,8 @@
                 <a href="./news.html">Contact us</a>
             </div>
             <div class="firstblock-text">
-                <h1>Lorem Ipsum is simply dummy text of the printing and.</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <h1>Our branches are located all over the world!</h1>
+                <p>You will most likely be able to find it even in your city</p>
             </div>
             <img src="./images/contact_us/map.png" alt="map">
             <div class="firstblock-content">
@@ -56,11 +56,11 @@
                 </div>
                 <div class="firstblock-content_phone">
                     <img src="./images/contact_us/phone.png" alt="phone">
-                    <p>+94 4444 5555 6</p>
+                    <p>+999 99999 999</p>
                 </div>
                 <div class="firstblock-content_gps">
                     <img src="./images/contact_us/gps.png" alt="gps">
-                    <p>but also the leap into electronic typesetting</p>
+                    <p>Look for us in all countries of the world!</p>
                 </div>
             </div>
         </div>
@@ -72,7 +72,7 @@
 
             <div class="secondblock-content">
                 <p>Say hello</p>
-                <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                <p>You can write to support or just say hello using the same form</p>
                 <div class="secondblock-content_inputs1">
                     <div class="secondblock-content_inputs1--left">
                         <p>First Name</p>
