Update 10.0git add .! We do all this!

--- a/news.html
+++ b/news.html
@@ -48,8 +48,8 @@
                 <a href="./news.html">News</a>
             </div>
             <div class="firstblock-text">
-                <h1>Lorem Ipsum is simply dummy text of the printing and.</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <h1>Latest news and posts on games</h1>
+                <p>All our developments, as well as the latest news, can be found here</p>
             </div>
             <div class="firstblock-find">
                 <img src="./images/news/find.png" alt="find">
@@ -65,21 +65,21 @@
                     <img src="./images/news/fon (1).png" alt="fon">
                     <div class="secondblock-left_block--btns">
                         <a href="#">John smash</a>
-                        <p>.5min</p>
+                        <p>16:21 | 28.11.2023</p>
                     </div>
-                    <p>Lorem Ipsum is simply dummy text dummy text </p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <p>We are growing! More promotions!</p>
+                    <p>Recently, because of our latest product, namely Mathcad, we have received a lot of support from our users, and therefore we have managed to reach a new level. After all, our company now has much more shares than before, which allows us to create future projects with much more enthusiasm.</p>
+                    <p>If you like this news, then you can read others by clicking on my profile above.</p>
                 </div>
                 <div class="secondblock-left_block">
                     <img src="./images/news/fon (2).png" alt="fon">
                     <div class="secondblock-left_block--btns">
                         <a href="#">John smash</a>
-                        <p>.5min</p>
+                        <p>11:30 | 28.11.2023</p>
                     </div>
-                    <p>Lorem Ipsum is simply dummy text dummy text </p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <p>The newest game that has broken all records!</p>
+                    <p>Our company has recently released a new product called Mathcad and it breaks all the records of the gaming industry! After just a week, about 210 million people played the game, and the constant online did not fall below 30 million! If you haven't tried the game yet, then you lose a lot, which is why run urgently to play it, because it runs on any devices thanks to optimization.</p>
+                    <p>If you like this news, then you can read others by clicking on my profile above.</p>
                 </div>
             </div>
 
@@ -90,9 +90,9 @@
                     <div class="secondblock-right_theme--container">
                         <div class="secondblock-right_theme--btns">
                             <a href="#">John smash</a>
-                            <p>.5min</p>
+                            <p>10:39 | 28.11.2023</p>
                         </div>
-                        <p>Lorem Ipsum is simply dummy text dummy text ?</p>
+                        <a href="#"><p>Do you think it's possible to create something better?</p></a>
                     </div>
                 </div>
                 <div class="secondblock-right_theme">
@@ -100,9 +100,9 @@
                     <div class="secondblock-right_theme--container">
                         <div class="secondblock-right_theme--btns">
                             <a href="#">John smash</a>
-                            <p>.5min</p>
+                            <p>9:10 | 28.11.2023</p>
                         </div>
-                        <p>Lorem Ipsum is simply dummy text dummy text ?</p>
+                        <a href="#"><p>Broken records again and again!</p></a>
                     </div>
                 </div>
                 <div class="secondblock-right_theme">
@@ -110,9 +110,9 @@
                     <div class="secondblock-right_theme--container">
                         <div class="secondblock-right_theme--btns">
                             <a href="#">John smash</a>
-                            <p>.5min</p>
+                            <p>20:51 | 27.11.2023</p>
                         </div>
-                        <p>Lorem Ipsum is simply dummy text dummy text ?</p>
+                        <a href="#"><p>Do you demand more? - Wait!</p></a>
                     </div>
                 </div>
                 <div class="secondblock-right_theme">
@@ -120,9 +120,9 @@
                     <div class="secondblock-right_theme--container">
                         <div class="secondblock-right_theme--btns">
                             <a href="#">John smash</a>
-                            <p>.5min</p>
+                            <p>17:44 | 27.11.2023</p>
                         </div>
-                        <p>Lorem Ipsum is simply dummy text dummy text ?</p>
+                        <a href="#"><p>Do you want to work with us? Then we are waiting for your resume here!</p></a>
                     </div>
                 </div>
                 <div class="secondblock-right_theme">
@@ -130,9 +130,9 @@
                     <div class="secondblock-right_theme--container">
                         <div class="secondblock-right_theme--btns">
                             <a href="#">John smash</a>
-                            <p>.5min</p>
+                            <p>15:14 | 27.11.2023</p>
                         </div>
-                        <p>Lorem Ipsum is simply dummy text dummy text ?</p>
+                        <a href="#"><p>Our development team and not only.</p></a>
                     </div>
                 </div>
                 <div class="secondblock-right_theme">
@@ -140,9 +140,9 @@
                     <div class="secondblock-right_theme--container">
                         <div class="secondblock-right_theme--btns">
                             <a href="#">John smash</a>
-                            <p>.5min</p>
+                            <p>13:19 | 27.11.2023</p>
                         </div>
-                        <p>Lorem Ipsum is simply dummy text dummy text ?</p>
+                        <a href="#"><p>How is the relationship between us and users built?</p></a>
                     </div>
                 </div>
                 <div class="secondblock-right_theme">
@@ -150,9 +150,9 @@
                     <div class="secondblock-right_theme--container">
                         <div class="secondblock-right_theme--btns">
                             <a href="#">John smash</a>
-                            <p>.5min</p>
+                            <p>10:05 | 27.11.2023</p>
                         </div>
-                        <p>Lorem Ipsum is simply dummy text dummy text ?</p>
+                        <a href="#"><p>It's like we're going with the flow! We are waiting for you too!</p></a>
                     </div>
                 </div>
                 
