Update 10.0! We do all this!

--- a/about_us.html
+++ b/about_us.html
@@ -146,7 +146,7 @@
         <div class="footer_main">
             <div class="footer_main-logo">
                 <a href="./index.html">LOGO</a>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p>You can always find something new here =) </p>
                 <p>@Logo</p>
             </div>
             <div class="footer_main-links">
@@ -159,7 +159,7 @@
             </div>
             <div class="footer_main-info">
                 <a href="./contact_us.html" style="font-weight: bold;">Contact us</a>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p>To tell us something or ask a question, you can call the phone number below.</p>
                 <p>+999 99999 999</p>
             </div>
             <div class="footer_main-soc_links">
@@ -169,6 +169,7 @@
         <div class="footer_copyright">
             <p>Copyright ® 2021 Lorem All rights Rcerved</p>
         </div>
-    </footer></div>
+    </footer>
+</div>
 </body>
 </html>
