--- a/about_us.html
+++ b/about_us.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The best website to find something new about games!">
     <title id="title">About us</title>
     <link rel="stylesheet" href="all_styles/all_styles.css">
     <link rel="stylesheet" href="all_styles/about_us.css">
